[package]
name = "strrange"
version = "0.1.0"
authors = ["Dolpheyn <farissufyan99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", features=["derive"] }
serde_json = "1.0.64"
